selfhost/test/typechecker/indexing/tuple_error_range.out
Error at %FILE_NAME%:1:16
Unsupported indexing operation
  |  (1, "two", [3])[1:2]
                    ^
Type '(Int, String, Int[])' is not indexable as a range
