selfhost/test/typechecker/indexing/tuple_error_range.abra
(1, "two", [3])[1:2]
